Add EBK to multiflat emails

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			if (form.multiflat.value == "One flat"){
 				messageString = messageString +" Zuhause"
 			} else {
-				messageString = messageString +`e ${desired_rooms}-Zimmer-Wohnung`
+				messageString = messageString +`e ${desired_rooms}-Zimmer-Wohnung mit EBK `
 			}
 			messageString = messageString +", wo wir dies in Ruhe tun können."
 
@@ -237,7 +237,7 @@
 			if (form.multiflat.value == "One flat"){
 				messageString = messageString +"a home"
 			} else {
-				messageString = messageString +`a ${desired_rooms}-room apartment`
+				messageString = messageString +`a ${desired_rooms}-room apartment with a fitted kitchen`
 			}
 			messageString = messageString +" where we can do so in peace."
 
