Close window after picking canned text

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 			// Add message to editor:
 			document.getElementById("editor").innerText = messageString;
 			toClipboard()
+			window.close()
 		}
 
 		function englishCannedText(){
@@ -92,6 +93,7 @@
 			// Add message to editor:
 			document.getElementById("editor").innerText = messageString;
 			toClipboard()
+			window.close()
 		}
 
 		function germanText(form){
