--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		function Text(form,noWbs){
 
 			messageString=``
-			if(form.wbsite.value!="Immobilienscout")messageString=`----------------Deutsch unter---------------------
+			if(form.website.value!="Immobilienscout")messageString=`----------------Deutsch unter---------------------
 Good ${greeting()} ${form.salutation.value} ${form.recipient.value},
 
 I am Adam Schweitzer, a university student studying theoretical mathematics in Berlin in a joint graduate scholarship program.
@@ -162,7 +162,7 @@ Adam Schweitzer
 		function cannedText(form,noWbs){
 
 			messageString=``
-			if(form.wbsite.value!="Immobilienscout")messageString=`----------------Deutsch unter---------------------
+			if(form.website.value!="Immobilienscout")messageString=`----------------Deutsch unter---------------------
 Good ${greeting()},
 
 I am Adam Schweitzer, a university student studying theoretical mathematics in Berlin in a joint graduate scholarship program.
