Corrected badly formatted newline

--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@ Adam Schweitzer
 -----------------------------------------------------`
 
 
-			messageString+=`Guten ${germanGreeting()} ${germanSal(form.salutation.value)} ${form.recipient.value},
+			messageString+=`
+Guten ${germanGreeting()} ${germanSal(form.salutation.value)} ${form.recipient.value},
 
 Ich bin Adam Schweitzer, Student der Theoretischen Mathematik in Berlin im Rahmen eines gemeinsamen Graduiertenstipendiums.
 Ich bin sehr interessiert an ${germanIntrodution(form)}. Ich bin 23 Jahre alt, rauche nicht und habe keine Haustiere. Ich suche eine ruhige Wohnung, in der ich mich auf mein Studium konzentrieren kann. Ich bin sehr glücklich, die Ausstattung der Küche zu sehen, da ich gerne koche! ${germanProximity(form)}
@@ -180,7 +181,8 @@ Kind regards,
 Adam Schweitzer
 -----------------------------------------------------`
 
-			messageString+=`Guten ${germanGreeting()},
+			messageString+=`
+Guten ${germanGreeting()},
 
 Ich bin Adam Schweitzer, Student der Theoretischen Mathematik in Berlin im Rahmen eines gemeinsamen Graduiertenstipendiums.
 Ich bin sehr interessiert an ${germanIntrodution(form)}. Ich bin 23 Jahre alt, rauche nicht und habe keine Haustiere. Ich suche eine ruhige Wohnung, in der ich mich auf mein Studium konzentrieren kann. Ich bin sehr glücklich, die Ausstattung der Küche zu sehen, da ich gerne koche! ${germanProximity(form)}
