--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 		function Text(form,noWbs){
 
-			if(form.recipient.value=="[MISSING]"){cannedText();return;}
+			if(form.recipient.value=="[MISSING]"){cannedText(form,noWbs);return;}
 
 
 			messageString=``
