--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				messageString = messageString + ` Ihrer ${rooms.value}-Zimmer-Wohnung`
 			} else if (form.reference.value == 'Title'){
 				messageString = messageString + ` Ihrem Angebot: "${form.title.value} auf ${form.website.value}"`
-			} else messageString = messageString + "Ihrem Angebot auf ${form.website.value}"
+			} else messageString = messageString + `Ihrem Angebot auf ${form.website.value}`
 
 			return messageString
 
