--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ I am very interested in your ${introduction(form)}. I am 23 years old, I don't s
 
 I have a stable income through my scholarship of 1000 euros${noWbs ? ` (increasing to 1600 as I start my PhD), and additionally, my family is willing to sign a guarantee (Bürgschaft) for my payment as well.` : `. I also have a WBS certificate ready.`} I can present you my excellent SCHUFA, my Mietschuldenfreiheitsbescheinigung and my scholarship contract. If you need any other documents, please let me know.
 
-In my previous tenancies I have learnt to handle basic repairs by myself, and I would continue to do so here, if necessary. Sadly my German is still very basic, but I can communicate through writing in German.
+In my previous tenancies I have learnt to handle basic repairs by myself, and I would continue to do so here, if necessary. 
 If you need any more information, please don't hesitate to write to me at adamsch61@gmail.com, through ${form.website.value} or with 015`+` 2229 72125.
 
 I wish you a nice day and I would be pleased if I had a chance to be invited to a viewing. 
@@ -147,7 +147,7 @@ Ich bin sehr interessiert an ${germanIntrodution(form)}. Ich bin 23 Jahre alt, r
 
 Ich habe ein stabiles Einkommen durch mein Stipendium von 1000 Euro${noWbs ? ` (das sich auf 1600 Euro erhöht, wenn ich meine Promotion beginne), und zusätzlich ist meine Familie bereit, eine Bürgschaft für meine Zahlung zu unterschreiben.` : `. Ich habe auch ein WBS-Zertifikat parat.`} Ich kann Ihnen meine ausgezeichnete SCHUFA, meine Mietschuldenfreiheitsbescheinigung und meinen Stipendienvertrag vorlegen. Sollten Sie weitere Unterlagen benötigen, lassen Sie es mich bitte wissen.
 
-In meinen vorherigen Mietverhältnissen habe ich gelernt, grundlegende Reparaturen selbst zu erledigen, und würde dies auch hier tun, falls nötig. Leider ist mein Deutsch noch sehr einfach, aber ich kann mich schriftlich auf Deutsch verständigen.
+In meinen vorherigen Mietverhältnissen habe ich gelernt, grundlegende Reparaturen selbst zu erledigen, und würde dies auch hier tun, falls nötig. 
 Wenn Sie weitere Informationen benötigen, zögern Sie bitte nicht, mir an adamsch61@gmail.com zu schreiben, oder über ${form.website.value}, oder mit 015`+` 2229 72125.
 
 Ich wünsche Ihnen einen schönen Tag und würde mich freuen, wenn ich zu einer Besichtigung eingeladen werden könnte. 
@@ -174,7 +174,7 @@ I am very interested in your ${introduction(form)}. I am 23 years old, I don't s
 
 I have a stable income through my scholarship of 1000 euros${noWbs ? ` (increasing to 1600 as I start my PhD), and additionally, my family is willing to sign a guarantee (Bürgschaft) for my payment as well.` : `. I also have a WBS certificate ready.`} I can present you my excellent SCHUFA, my Mietschuldenfreiheitsbescheinigung and my scholarship contract. If you need any other documents, please let me know.
 
-In my previous tenancies I have learnt to handle basic repairs by myself, and I would continue to do so here, if necessary. Sadly my German is still very basic, but I can communicate through writing in German.
+In my previous tenancies I have learnt to handle basic repairs by myself, and I would continue to do so here, if necessary.
 If you need any more information, please don't hesitate to write to me at adamsch61@gmail.com, through ${form.website.value} or with 015`+` 2229 72125.
 
 I wish you a nice day and I would be pleased if I had a chance to be invited to a viewing. 
@@ -192,7 +192,7 @@ Ich bin sehr interessiert an ${germanIntrodution(form)}. Ich bin 23 Jahre alt, r
 
 Ich habe ein stabiles Einkommen durch mein Stipendium von 1000 Euro${noWbs ? ` (das sich auf 1600 Euro erhöht, wenn ich meine Promotion beginne), und zusätzlich ist meine Familie bereit, eine Bürgschaft für meine Zahlung zu unterschreiben.` : `. Ich habe auch ein WBS-Zertifikat parat.`} Ich kann Ihnen meine ausgezeichnete SCHUFA, meine Mietschuldenfreiheitsbescheinigung und meinen Stipendienvertrag vorlegen. Sollten Sie weitere Unterlagen benötigen, lassen Sie es mich bitte wissen.
 
-In meinen vorherigen Mietverhältnissen habe ich gelernt, grundlegende Reparaturen selbst zu erledigen, und würde dies auch hier tun, falls nötig. Leider ist mein Deutsch noch sehr einfach, aber ich kann mich schriftlich auf Deutsch verständigen.
+In meinen vorherigen Mietverhältnissen habe ich gelernt, grundlegende Reparaturen selbst zu erledigen, und würde dies auch hier tun, falls nötig.
 Wenn Sie weitere Informationen benötigen, zögern Sie bitte nicht, mir an adamsch61@gmail.com zu schreiben, oder über ${form.website.value}, oder mit 015`+` 2229 72125.
 
 Ich wünsche Ihnen einen schönen Tag und würde mich freuen, wenn ich zu einer Besichtigung eingeladen werden könnte. 
